# hiorg-sync

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
app/: __init__.py  main.py
src/hiorg_sync/: app_factory.py  legacy.py  main.py
src/hiorg_sync/core/: security.py  settings.py  storage.py
src/hiorg_sync/routers/: api.py  misc.py  oauth.py  sync.py  ui.py
src/hiorg_sync/services/: config_store.py  email_settings.py  groupmap_store.py  hiorg.py  ldap.py  ldap_config.py  notify.py
src/hiorg_sync/web/static/: custom.css  groupmap.js  styles.css
src/hiorg_sync/web/templates/: base.html  dashboard.html  groupmap.html  login.html  ov.html  settings_email.html  settings_ldap.html  settings_ldap_conn.html  settings_ou_map.html  settings_ovs.html
