[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiorg-sync"
version = "0.3.0"
description = "HiOrg Sync (OAuth + LDAP/AD) with optional UI tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "requests",
  "ldap3",
  "python-multipart",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
